Fix e.movement is not supported on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ body {
   font-size: 11px;
   line-height: 1;
   color: #ffffff;
+  cursor: default;
   /* z-index: 1111; */
 }
 .rotate-layer {
